[package]
name = "dice_roller"
version = "0.1.0"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dice-command-parser = "0.3.1"
rand = "0.7"
thiserror = "1.0"
rand_pcg = "0.2"